reports/basics_data_carpentry.log
Traceback (most recent call last):
  File "/home/danph/Repos/win_ssd/myprojects/python-workshop-base/.venv/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/danph/Repos/win_ssd/myprojects/python-workshop-base/.venv/lib/python3.8/site-packages/nbclient/client.py", line 1085, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/danph/Repos/win_ssd/myprojects/python-workshop-base/.venv/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/danph/Repos/win_ssd/myprojects/python-workshop-base/.venv/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/danph/.pyenv/versions/3.8.5/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/home/danph/Repos/win_ssd/myprojects/python-workshop-base/.venv/lib/python3.8/site-packages/nbclient/client.py", line 551, in async_execute
    await self.async_execute_cell(
  File "/home/danph/Repos/win_ssd/myprojects/python-workshop-base/.venv/lib/python3.8/site-packages/nbclient/client.py", line 846, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/danph/Repos/win_ssd/myprojects/python-workshop-base/.venv/lib/python3.8/site-packages/nbclient/client.py", line 748, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
user:host:~$ python
Python 3.5.1 (default, Oct 23 2015, 18:05:06)
[GCC 4.8.3] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> 2 + 2
4
>>> print("Hello World")
Hello World

------------------

[0;36m  File [0;32m"/tmp/ipykernel_9174/739826891.py"[0;36m, line [0;32m1[0m
[0;31m    user:host:~$ python[0m
[0m             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (739826891.py, line 1)

